--- a/data/House Zolis.wiki
+++ b/data/House Zolis.wiki
@@ -22,4 +22,8 @@ Kitchen
         -Luxurious food is crafted here
         -Platinum cooking utensils
         -Scraps are fed to the Giant Hyenas, the scraps of the Hyena scraps are fed to the Skaa chefs
-              
+        
+3 Brothers
+    1st born lazy ball goer
+    hard worker at the farms
+    hasty quick thinker               
