--- a/data/Leeran.wiki
+++ b/data/Leeran.wiki
@@ -15,29 +15,29 @@ Items for Sale:
         -books
             -[Legend of Regdar] -10g
             -[The Resignation of Kord] -10g
-            -[Foresake the Gods] -50g    
-            -[To Kill a Mocking Kenku] -20g  
+            -[Foresake the Gods] -50g    - DESTROYED
+            -[To Kill a Mocking Kenku] -20g    - purchased by good
             -[Holy Tome of the Order of Steel] - 5g    
-        -Pearl of Power 300g - pg 184 DM
+        -Pearl of Power 300g - pg 184 DM  - purchased by good
         -Etherium Ingot x 20 200g 
         Gemstones 
             -3 Diamonds Pink/Yellow/Blue (worth 5000g)
             -10g to 500g valued ones
             -Obsidian Shard - 10g
             -Diamond Dust (worth 300g)
-        -Onyx Dog 300g - pg 170 DM
-        -Sepentine Owl 250g - pg 170 DM
+        -Onyx Dog 300g - pg 170 DM  
+        -Sepentine Owl 250g - pg 170 DM  - purchased by good
         -Fine Parchment - 1s per sheet
           -Ink - 10g per ounce
           -Chalk - 1g per piece
         -Blank spell books - 5g each      
-        -Book of Understanding 400g - pg 209   
-        -[Sentient Rock Henry] - 50g 10lb   
+        -Book of Understanding 400g - pg 209   - purchased by good
+        -[Sentient Rock Henry] - 50g 10lb      - purchased by good
         -Rope of Climbing - 200g pg197
         -lvl 1 Wizard spells: all 100g each scroll
         -lvl 2 Wizard spells: all 200g each scroll
         -lvl 3 Wizard spells: all 300g each scroll
-        -Undercommon crafting instructions for Sending Stones - 200g 
+        -Undercommon crafting instructions for Sending Stones - 200g   - purchased by good
         -Quarterstaff Arcane Focus - 5g
-        -Finely Crafted Wood Wardrobe with Etherium inlay - 125g
+        -Finely Crafted Wood Wardrobe with Etherium inlay - 125g  
         -Staff of Fire - 200g
