--- a/data/Poison Crafting.wiki
+++ b/data/Poison Crafting.wiki
@@ -6,4 +6,7 @@ Nightshade
       poisoned effect
       3d6
       
-Extract Poison requires DC 20 nature check      
+Extract Poison requires DC 20 nature check
+
+Wyvern Poison - 1200g  - 12lb of a poisonous substance
+   7d6 DC 15       
