--- a/data/House Zolis.wiki
+++ b/data/House Zolis.wiki
@@ -24,6 +24,6 @@ Kitchen
         -Scraps are fed to the Giant Hyenas, the scraps of the Hyena scraps are fed to the Skaa chefs
         
 3 Brothers
-    1st born lazy ball goer
-    hard worker at the farms
-    hasty quick thinker               
+    1st born lazy ball goer  - Hikaz
+    hard worker at the farms - Linnoz 
+    hasty quick thinker      - T'Qizeth         
