--- a/data/Leeran.wiki
+++ b/data/Leeran.wiki
@@ -17,7 +17,8 @@ Items for Sale:
             -[The Resignation of Kord] -10g
             -[Foresake the Gods] -50g    - DESTROYED
             -[To Kill a Mocking Kenku] -20g    - purchased by good
-            -[Holy Tome of the Order of Steel] - 5g    
+            -[Holy Tome of the Order of Steel] - 5g  
+            -[Pantheon of the Dawn War] - 10g  
         -Pearl of Power 300g - pg 184 DM  - purchased by good
         -Etherium Ingot x 20 200g 
         Gemstones 
