--- a/data/Nowa Huta.wiki
+++ b/data/Nowa Huta.wiki
@@ -41,6 +41,13 @@ Points of interest:
     A place for people who newly arrive to aquaint themselves. The center is a large pool filled with a dazzling amount of gold/silver/copper coins where people have surrendered their now useless currency of their past.
         Maintained by Head Cleric Namaine - human(M) - (Born & Raised)  
         
+  Temple of [Sehanine]
+    Ancient elvish stone temple adorned with a crescent moon atop it's highest point.
+    The priests of the temple to not worship during the day, and the temple doors are closed. 
+    Priests: Bellophanie (Diviner), Lyneria (Evoker), Frasca (Illusionist) (See Volos)
+      There is a large circular hole in the middle of the roof of the temple for viewing the moon at night, beneath it, a pool of shallow water with a small drainage canal for overflow that leads into a well outside the temple.
+      There are candles lining the pool, used for prayer and omens.     
+        
   Fairgrounds
     Annual Festival occurrs here (5 days after an adventurer group arrives) to celebrate the arrival of the newcomers
      - ribbons, decorations, bards playing, a formal welcome from the Queen herself
