--- a/data/Rotting Tower.wiki
+++ b/data/Rotting Tower.wiki
@@ -35,6 +35,8 @@ Rooms of Interest:
       "[Bahamut]'s resting place/identity" (whichever is more relevant)
       "The existence of the [Feywild]" 
       "The entrapment of [Hadar]"
+      "I know who murdered the Iksar lords" - from [Kyra]
+      "I know about the thieves of [Luthadel]" - from [Kyra]
       "Sur Rep Ti Tius" password for the warded door to the Phylactery room
 
   Menagerie of Souls -
@@ -50,6 +52,7 @@ Rooms of Interest:
       -[Dack Greyhall]: A polished warhammer of sturdy looking make, etched with a long forgotten celetial symbol of [Hyragul]. The ancient hero that once saved the material plane from trolls. 
       -[Yygrool]: A miniature taxidermy of an 8 winged water serpent with aquamarine eyes.
         One of the most powerful troll shapeshifters to have existed.
+      -[Kyra]: trapped in an etherium ingot  
     A freed soul will seek out it's body if willing and able, otherwise pass onto the next realm in it's journey.
 
   Laboratory - 
