adding group three notes

--- a/data/AkumaFruits.wiki
+++ b/data/AkumaFruits.wiki
@@ -57,7 +57,7 @@ Characters who die by drowning when under the effect of an Akuma Fruit will go t
 2. Resurrection - guarantees the user a second chance at life. User respawns as ghost in random location in world upon death.
 3. Sight - allows user to see ALL spectrums of light. Thus night is perfectly lit up due to cosmic lights for example.
 4. Pillow - The user's body can absorb any and all blunt force.
-5. God Creator - The user sometimes turns inanimate objects into gods that speak to them, and no one else.
+5. God Creator - The user sometimes turns inanimate objects into gods that speak to them, and no one else. [Alas]
 6. Nutritious - The user no longer needs to eat or drink to live. Can also bestow nutritious properties to any object/material as well as cleansing toxic ingredients or chemicals. Immune to food poisoning. (consumed by [Junarth Quon])
 7. Smelly - The user can assume any scent of whatever potency desired, or spread this scent onto other objects. (consumed by [Kieran Maon])
 8. Rough - The user can make their skin extremely rough, much like sandpaper.
