updating some notes

--- a/data/Ashmadai.wiki
+++ b/data/Ashmadai.wiki
@@ -4,7 +4,12 @@ A hidden cult devoted to [Asmodeus]
 
 lead by the dwarven priest [Favria]
 
-the cult has about a meager 10 members, and have not had any successful contact with [Asmodeus] although not due to a lack of trying.
+the cult has about a meager 10 members, and have not had any successful contact with [Asmodeus] although not due to a lack of trying. [Cael Caemond] was given access to the cult recently when he brought them the head of [Tharizdun] which has been making their rituals more productive.
+
+The cult seeks to bring demons into the world to cleanse the weak.
+
+Notable members:
+[Cael Caemond] - former mercencary for the [Golden Hand] and previous member of the [Bandits of Deception]
 
 Members have a minor boon:
 
