--- a/data/Cael Caemond.wiki
+++ b/data/Cael Caemond.wiki
@@ -2,5 +2,5 @@
 
 the evil group's level headed companion from the [Golden Hand] mercenary group
 
-Joined up with the Cult of [Asmodeus] in [Gorda] after his group was slaughtered
+Joined up with the Cult of [Asmodeus] in [Gorda] called [Ashmadai] after his group was slaughtered
 has the head of [Tharizdun]
