--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -28,6 +28,8 @@ Marines ariving to [Mayara] in [Fiore] in 6 days upon [King Jor Doken] being inf
 -50 marines
 -2 officers
 
+[Venril Sathir] sends 6 [Steel Inquisitor]s, 6 Brothers of the [Order of Steel] in a metal warship to hunt down [Plosive] and [Jit] for the [Stone of Kord]
+
 [Callistege] 5 days to craft sending stones - DONE
 
 [Kyra] orders a bronze barding for her wolf Vin from Erky at [Ak'anon]
