--- a/data/Leeran.wiki
+++ b/data/Leeran.wiki
@@ -20,7 +20,6 @@ Items for Sale:
             -[Holy Tome of the Order of Steel] - 5g  
             -[Pantheon of the Dawn War] - 10g  
         -Pearl of Power 300g - pg 184 DM  - purchased by good
-        -Etherium Ingot x 20 200g 
         Gemstones 
             -3 Diamonds Pink/Yellow/Blue (worth 5000g)
             -10g to 500g valued ones
@@ -42,3 +41,8 @@ Items for Sale:
         -Quarterstaff Arcane Focus - 5g
         -Finely Crafted Wood Wardrobe with Etherium inlay - 125g  
         -Staff of Fire - 200g
+        
+        Recently Looted amungst the noble chaos in [Luthadel]
+        By [Matkina]
+        -Etherium Ingot 1 lb x 5 200g 
+        -Mithril Ingots 1 lb x 10 100g
