--- a/data/Pelor.wiki
+++ b/data/Pelor.wiki
@@ -4,3 +4,7 @@ God of the sun and agriculture (pg 10 of DM handbook)
 Neutral Good
 Oversees [Augsburg]
 Symbol: Circle with six outwardly radiating points
+
+Does not have an emperion, but rather manifests as light itself, from the sky.
+
+[Venril Sathir] is actively seeking to diminish Pelor's impact on the world by blotting out the sun with clouds from the imprisonment of [Gruumsh]
