adding chief blue aboleth

--- a/data/Pumanath.wiki
+++ b/data/Pumanath.wiki
@@ -2,7 +2,7 @@
 
 (Ak'anon), Triton vilage that is almost completely under water, save for a small docking area for trade. The village mainly comprises of the "mines of Ak'anon" adapted to a livable lush area.
 
-The Tritons have been suffering from a unqie disease that is said to have spread from fish coming from the great depths.
+The Tritons have been suffering from a unqie disease that is said to have spread from fish coming from the great depths. Some swim to such depths to acquire rare treatures like their Black Pearls and occasional Flail Snail Shells. The disease is actually caused by the lair effect of the [Chief Blue Aboleth]
 
 Lead by Lord Prexus - (Kraken Priest pg 215 of Volos)
     -can speak with the Kraken to prevent attacks, and defend Pumanath
