adding memory notes

--- a/data/Alas.wiki
+++ b/data/Alas.wiki
@@ -9,6 +9,7 @@ Encountered [Dockson] on one of his smuggling runs to [Augsburg] from [Luthadel]
 
 FORGOTTEN KNOWLEDGE
 Love Interest from the [Feywild], [Libelle] who turned out to be a silver dragon
+-will still be alive, but is an Ancient Silver Dragon, now residing at [Ko Foren]
 
 Parents and Grandparents will all be dead.
 One Sibling will still be alive, [Abarat]
