--- a/data/Ko Foren.wiki
+++ b/data/Ko Foren.wiki
@@ -16,4 +16,5 @@ Wildlife:
 (wyvern lair) equivalent that has a Tarrasque at it's heart (pg 286)
 -when disturbed, he goes on a rampage, eating many of the beasts on the island before going back to his cave to rest.
 
-
+(wyvern lair) GOOD GROUP
+-the cave contains [Libelle], the Ancient Silver Dragon
