--- a/data/Libelle.wiki
+++ b/data/Libelle.wiki
@@ -1,5 +1,8 @@
 ﻿++ Libelle
 
-Love interest of [Alas], can be found in the [Feywild] with the appearance of an elf in [Tajuru]
+Love interest of [Alas], 
 
-Will be elderly when found (1200 years old in dragon years)
+used to be found in the [Feywild] with the appearance of an elf in [Tajuru]
+but since [Alas] left hundreds of years ago, she became bitter, lonely, and took residence in the wyvern cave of [Ko Foren]
+
+Will be elderly and bitter that [Alas] LEFT her during the war when found (1200 years old in dragon years)
